# llminify

./: LICENSE  README.md  cli.py  pyproject.toml
command/: minify.py
source/: github.py  localfile.py  utils.py
transform/: check.py  preprocess.py
