[project]
name = "llminify"
version = "0.0.1"
description = "Add your description here"
authors = [
    { name = "Ryo Okubo", email = "syucream1031@gmail.com" }
]
dependencies = [
    "typer>=0.12.3",
    "requests>=2.32.3",
    "nbformat>=5.10.4",
    "nbconvert>=7.16.4",
    "nltk>=3.8.1",
    "tiktoken>=0.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.1",
    "mypy>=1.10.1",
    "types-requests>=2.32.0.20240712",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[mypy-nltk]
ignore_missing_imports = true
